--- a/frontend/src/Components/Header/Header.css
+++ b/frontend/src/Components/Header/Header.css
@@ -39,3 +39,22 @@
     border-radius: 50px;
     width: max(10vw,90px);
 }
+
+@media (max-width:1050px) {
+    .header-contents{
+        max-width: 45%;
+    }
+}
+
+@media (max-width:750px) {
+    .header-contents{
+        max-width: 65%;
+    }
+    .header-contents p{
+        display: none;
+    }
+
+    .header-contents bottom{
+        padding: 2vw 4vw;
+    }
+}
