--- a/frontend/src/Components/Navbar/Navbar.css
+++ b/frontend/src/Components/Navbar/Navbar.css
@@ -61,3 +61,58 @@
     background: tomato;
     border-radius: 5px;
 }
+
+@media (max-width: 1050px){
+    .navbar .logo{
+        width: 140px;
+    }
+
+    .navbar-menu{
+        font-size: 17px;
+        gap: 20px;
+    }
+
+    .navbar-right{
+        gap: 30px;
+    }
+
+    .navbar-right img{
+        width: 22px;
+    }
+
+    .navbar-right button{
+        padding: 8px 25px;
+    }
+    
+}
+
+@media (max-width: 900px){
+    .navbar .logo{
+        width: 120px;
+    }
+
+    .navbar-menu{
+        font-size: 16px;
+        gap: 15px;
+    }
+
+    .navbar-right{
+        gap: 20px;
+    }
+
+    .navbar-right img{
+        width: 20px;
+    }
+
+    .navbar-right button{
+        padding: 7px 20px;
+        font-size: 15px;
+    }
+    
+}
+
+@media (max-width: 700px) {
+    .navbar-menu{
+        display: none;
+    }
+}
